--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
-#URL=https://dev_winston.fwcins.com/FWCPortal/User/Login/Login.html
-URL=https://demowinston.fwcins.com/FWCPortal/User/Login/Login.html
+URL=https://dev_winston.fwcins.com/FWCPortal/User/Login/Login.html
+#URL=https://demowinston.fwcins.com/FWCPortal/User/Login/Login.html
 #URL=https://testwinston.fwcins.com/FWCPortal/User/Login/Login.html
 USER_NAME=Acentria36
 PASSWORD=AI495!
