--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,20 @@
 	        <artifactId>pdfbox</artifactId>
 	        <version>2.0.6</version>
 		</dependency>
+		
+		<dependency>
+     <groupId>io.github.bonigarcia</groupId>
+     <artifactId>webdrivermanager</artifactId>
+     <version>2.2.5</version>
+</dependency>
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-chrome-driver</artifactId>
+    <version>3.141.59</version>
+</dependency>
+		
+		
 	</dependencies>
 	<build>
 		<plugins>
